--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+body {
+    background-image: url("https://i.redd.it/w7mvzief2wpz.jpg");
+}
 ul {
     border: 1px solid #cecece;
     border-width: 1px 0;
