--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,3 @@
-body {
-    background-image: url("https://i.redd.it/w7mvzief2wpz.jpg");
-}
 ul {
     border: 1px solid #cecece;
     border-width: 1px 0;
@@ -81,6 +78,9 @@ a:visited {
 	transform: rotate(-0.7deg);
 	background: #0099cc;
 }
+body{
+	background-image: url("http://i.imgur.com/HiYkk.jpg");	
+}	
 
 h1 {
 	font-family: 'Acme', cursive;
